@@ -24,4 +24,20 @@ describe Administrate::Field::HasMany do
       expect(page).to be_instance_of(Administrate::Page::Table)
     end
   end
+
+  describe "class_name option" do
+    it "determines what dashboard is used to present the association" do
+      FooDashboard = Class.new
+      dashboard_double = double(table_attributes: [])
+      allow(FooDashboard).to receive(:new).and_return(dashboard_double)
+
+      association = Administrate::Field::HasMany.with_options(class_name: "Foo")
+      field = association.new(:customers, [], :show)
+      table = field.associated_table
+      attributes = table.attribute_names
+
+      expect(dashboard_double).to have_received(:table_attributes)
+      expect(attributes).to eq([])
+    end
+  end
 end
